--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,4 +15,5 @@
     <string name="category_pop_desc">Все поп песни</string>
     <string name="category_shanson">Песни шансона</string>
     <string name="category_shanson_desc">Все песни шансона</string>
+    <string name="reload_menu">Перезагрузить песни</string>
 </resources>
