--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="category_shanson">Shanson Songs</string>
     <string name="category_shanson_desc">This is all Shanson Songs</string>
     <string name="reload_menu">Reload Songs</string>
+    <string name="reload_message">Reloading song list ...</string>
 </resources>
