--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,4 +17,5 @@
     <string name="category_shanson_desc">Все песни шансона</string>
     <string name="reload_menu">Перезагрузить песни</string>
     <string name="reload_message">Перезагрузка списка песен ...</string>
+    <string name="search_hint">Найти песню или исполнителя</string>
 </resources>
