--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="category_shanson_desc">This is all Shanson Songs</string>
     <string name="reload_menu">Reload Songs</string>
     <string name="reload_message">Reloading song list ...</string>
+    <string name="search_hint">Search songs and artists</string>
 </resources>
